feat: new Powergamers API
example -> http://localhost:8080/powergamers?list=last2days&include_all=true
