# internal/api/oas_unimplemented_gen.go
@@ -53,8 +53,8 @@ func (UnimplementedHandler) GetInsomniacs(ctx context.Context, params GetInsomni
 
 // GetPowerGamers implements getPowerGamers operation.
 //
-// Fetches and returns power gamers (today's list). By default returns first page only, use
-// include_all=true for all pages.
+// Fetches and returns power gamers. By default returns first page only, use include_all=true for all
+// pages. Can filter by time period and vocation.
 //
 // GET /powergamers
 func (UnimplementedHandler) GetPowerGamers(ctx context.Context, params GetPowerGamersParams) (r GetPowerGamersRes, _ error) {
